--- a/src/Components/PokeFetch/PokeFetch.css
+++ b/src/Components/PokeFetch/PokeFetch.css
@@ -26,10 +26,14 @@
   align-self: flex-start;
   margin-top: -100px;
   margin-left: 18vw;
-}
 
+}
+  
 .pokeImg {
-  width: 500px;
+ width: 500px;
+ opacity: .75;
+ background-color: black;
+
 }
 
 .pokeName {
